# matrix-calculations

./: .gitattributes  .gitmodules  README.md  pyproject.toml
.github/workflows/: tests.yml
notebooks/: comparison.nb  ekf_neural_network.ipynb  exponentiation.ipynb  extended_kalman_filter.ipynb  fft.ipynb  householder.ipynb  jax.ipynb  linalg.ipynb  matrix_functions.ipynb  qr.ipynb
src/: main.py  pade.py  power.py  symbolic.py  wrappers.py
tests/: test_pade.py  test_power.py  test_wrappers.py
