[project]
name = "matrix-calculations"
version = "0.1.0"
description = "Numerical linear algebra experiments for matrix functions and related computations"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "numpy>=2.4.4",
    "torch>=2.11.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
]
notebooks = [
    "jupyterlab>=4.4.0",
    "matplotlib>=3.10.0",
    "scipy>=1.16.0",
]
